# cdf-plasma-controller

./: .dockerignore  .editorconfig  .flake8  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  environment.yml  osc_runner.py  plasma_controller.py  pyproject.toml  requirements.txt  score_player.py  tox.ini
.circleci/: config.yml
config/: irobot.conf  test.conf
controller/: abstract_controller.py  base_controller.py  keyboard_controller.py  osc_controller.py
controller/keyboard/: keyboard_controller.py  keyboard_knob.py
deploy/: pigpiod.service  plasma_controller.service  plasma_player.service  startup.sh
extras/iannix/: P-Tubes_MM_D-1.iannix  P-Tubes_w-SC_MM_G-1.iannix  P-Tubes_w-SC_MM_G-2.iannix  basic.iannix  capture_player.sh  extract_scores.py  finalize_captures.py  new_score.iannix  osc_sink.py  plot_scores.py  rewrite_for_localhost.py
extras/touchosc/: PWM-calibration-iphone.touchosc  PWM-iphone.touchosc
interrupter/: base_interrupter.py  simple_interrupter.py
modulator/: base_modulator.py  callback_modulator.py
pigpio/util/: pigpiod
plasma/: osc_client.py  utils.py
plasma/controller/: base_controller.py  keyboard_controller.py  osc_controller.py
plasma/interrupter/: base_interrupter.py  simple_interrupter.py
plasma/modulator/: base_modulator.py  callback_modulator.py
pwm/: abstract_interrupter.py  abstract_pwm.py  base_pwm.py  mock_pwm.py  pi_pwm.py  simple_interrupter.py
scores/: README.md  pwm1.csv  pwm2.csv  pwm3.csv  pwm4.csv  pwm5.csv  pwm6.csv  pwm7.csv
scripts/: update_fleet.sh
utils/: osc_msg.py
(+18 files in other folders)
